--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,63 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "core-js": "^3.2.1",
+    "dotenv-safe": "^8.1.0",
     "graphql": "^14.5.0",
-    "graphql-relay": "^0.6.0"
+    "graphql-relay": "^0.6.0",
+    "isomorphic-fetch": "^2.2.1",
+    "kcors": "^2.2.2",
+    "koa": "^2.8.1",
+    "koa-bodyparser": "^4.2.1",
+    "koa-graphql": "^0.8.0",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.6.13",
+    "pretty-error": "^2.1.1",
+    "subscriptions-transport-ws": "^0.9.16",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-async-generators": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-typescript": "^7.6.0",
+    "@types/graphql-relay": "^0.4.11",
+    "@types/kcors": "^2.2.3",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.0.42",
+    "@types/mongoose": "^5.5.17",
+    "@types/triple-beam": "^1.3.0",
+    "auto-reload-webpack-plugin": "^1.1.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
+    "typescript": "^3.6.2",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "scripts": {
+    "build": "npm run clear && babel src --extensions \".es6,.js,.es,.jsx,.mjs,.ts\" --ignore *.spec.js --out-dir dist --copy-files",
+    "build:webpack": "npm run clear && webpack --env.mode=prod",
+    "clear": "rimraf ./dist",
+    "flow": "flow",
+    "lint": "eslint src/**",
+    "start": "npm run clear && webpack --env.mode=dev",
+    "serve": "node dist/index.js"
   }
 }
