--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 node_modules
-packages/**/node_modules
+**/node_modules
+npm-debug.log
+.DS_Store
+dist
+build
+.idea
+yarn-error.log
+.cache
+.vs/
+
+.env
